2004-12-04  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclEncoding.c:	Different fix for [Bug 1077005].
	* generic/tclEvent.c:	Broke apart TclpSetInitialEncodings() on
	* generic/tclInt.h:	Windows into TclpSetInterfaces(), that is
	* unix/tclUnixInit.c:	fundamentally essential, and the initialization
	* win/tclWinInit.c:	of the system encoding, which is not.  Made
	the TclpSetInterfaces call part of TclInitSubsystems so it cannot be
	overlooked.

2004-12-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* changes: updated for 8.5a2 release

2004-12-02  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclUtil.c (TclSetProcessGlobalValue):  Handle the case
	where a ProcessGlobalValue might be assigned to itself.

	* generic/tclEncoding.c (MakeFileMap):	Correct refcounting errors
	managing values returned by TclPathPart (with refCount of 1!) that
	led to a memory leak.  [Bug 1077474].

2004-12-02  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclPathObj.c: fix and new tests for [Bug 1074671] to
	* tests/fileSystem.test:   ensure tilde paths are not returned
	specially by 'glob'.

2004-12-02  Kevin B. Kenny  <kennykb@acm.org>

	* win/Makefile.in: Added a 'sed' in the setting of ROOT_DIR_NATIVE
	to compensate for a bug in cygpath (at least version 1.36) that
	leaves a trailing backslash on the end of the converted path.

2004-12-02  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tclInterp.c (Alias,Target,Master): Rewrote these so that
	the aliases that refer to an interpreter are stored in a list and
	not a hashtable (which was only ever a convenience, and forced the
	use of a global mutex to generate keys!) [FRQ 1077210]
	* generic/tclNamesp.c (numNsCreated): Moved into thread-local
	storage to remove a global mutex. [FRQ 1077210]

2004-12-01  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclUtil.c (TclGetProcessGlobalValue):	Narrowed the scope
	of mutex locks.

	* generic/tclUtil.c:		Updated Tcl_GetNameOfExecutable() to