@@ -396,8 +396,7 @@ namespace eval ::msgcat::test {
         } else {
 	    set msg [string tolower $loc]
 	}
-	makeFile [list ::msgcat::mcset $loc abc abc-$loc] $msg.msg \
-		[file join [temporaryDirectory] msgdir]
+	makeFile [list ::msgcat::mcset $loc abc abc-$loc] $msg.msg $msgdir
     }
     variable count 1
     foreach loc {foo foo_BAR foo_BAR_baz} {
@@ -494,7 +493,7 @@ namespace eval ::msgcat::test {
         } else {
 	    set msg [string tolower $loc]
 	}
-	removeFile $msg.msg msgdir
+	removeFile $msg.msg $msgdir
     }
     removeDirectory msgdir
 
